--- a/Noteworthy/AndroidManifest.xml
+++ b/Noteworthy/AndroidManifest.xml
@@ -14,13 +14,21 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.noteworthy.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".AddClass"
+            android:label="@string/title_activity_add_class" >
+        </activity>
+        <activity
+            android:name=".Classes"
+            android:label="@string/title_activity_classes" >
         </activity>
     </application>
 
