--- a/Noteworthy/bin/AndroidManifest.xml
+++ b/Noteworthy/bin/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.noteworthy"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    <uses-feature android:name="android.hardware.camera"
+                  android:required="true" />
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="17"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -19,6 +20,14 @@
         <activity
             android:name="com.noteworthy.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="CalendarActivity"
+            android:label="@string/title_activity_calendar" >
+        </activity>
+        <activity
+            android:name="PhotoActivity"
+            android:label="@string/title_activity_calendar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
